--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -439,13 +439,14 @@ jobs:
 
   account-console-integration-tests:
     name: Account Console IT
-    runs-on: ubuntu-latest
     needs: build
     timeout-minutes: 75
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-latest]
         browser: [chrome]
       fail-fast: false
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
 
