--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -52,6 +52,7 @@
     <modules>
         <module>db-allocator-plugin</module>
         <module>integration-arquillian</module>
+        <module>integration-playwright</module>
         <module>model</module>
         <module>utils</module>
     </modules>
