--- a/pom.xml
+++ b/pom.xml
@@ -301,6 +301,7 @@
         <module>misc</module>
         <module>js</module>
         <module>quarkus</module>
+        <module>test</module>
     </modules>
 
     <dependencyManagement>
