--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,6 +139,43 @@ jobs:
         with:
           job-id: base-integration-tests-${{ matrix.group }}
 
+  base-cookies-integration-tests:
+    name: Base IT Strict Cookies
+    needs: build
+    runs-on: ubuntu-latest
+    timeout-minutes: 100
+    strategy:
+      fail-fast: false
+    steps:
+      - uses: actions/checkout@v4
+
+      - id: integration-test-setup
+        name: Integration test setup
+        uses: ./.github/actions/integration-test-setup
+
+      - name: Run base tests
+        run: |
+          TESTS="**.broker.**,**.javascript.**"
+          echo "Tests: $TESTS"
+          ./mvnw test ${{ env.SUREFIRE_RETRY }} -Pauth-server-quarkus -Pfirefox-strict-cookies "-Dwebdriver.gecko.driver=$GECKOWEBDRIVER/geckodriver" -Dauth.server.host=auth-server-127-0-0-1.nip.io -Dauth.server.host2=127.0.0.1.sslip.io -Dtest=$TESTS -pl testsuite/integration-arquillian/tests/base 2>&1 | misc/log/trimmer.sh
+
+      - name: Upload JVM Heapdumps
+        if: always()
+        uses: ./.github/actions/upload-heapdumps
+
+      - uses: ./.github/actions/upload-flaky-tests
+        name: Upload flaky tests
+        env:
+          GH_TOKEN: ${{ github.token }}
+        with:
+          job-name: Base IT Strict Cookies
+
+      - name: Surefire reports
+        if: always()
+        uses: ./.github/actions/archive-surefire-reports
+        with:
+          job-id: base-cookies-integration-tests
+
   adapter-integration-tests:
     name: Adapter IT
     needs: build
@@ -1084,6 +1121,7 @@ jobs:
       - build
       - unit-tests
       - base-integration-tests
+      - base-cookies-integration-tests
       - adapter-integration-tests
       - adapter-integration-tests-strict-cookies
       - quarkus-unit-tests
